# ____________hospita-l-management___________

./: CMakeLists.txt  README.md  bill.c  bill.h  doctor.c  doctor.c.autosave  doctor.h  main.c  menu.c  menu.h  patient.c  patient.c.autosave  patient.h  pharmacy.c  pharmacy.h  room.c  room.h  staff.c  staff.c.autosave  staff.h  treatment.c  treatment.h
